--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <img class="header__logo" src="img/logo.svg" alt="img">
+            <div class="header__burger">
+                <div class="burger__line"></div>
+            </div>
+            <a href="#" class="header__logo">
+                <img src="img/logo.svg" alt="img">
+            </a>
             <nav class="header__menu">
                 <ul class="header__menu-list">
                     <li class="header__menu-item">
@@ -107,5 +112,6 @@
             <button class="footer__btn">Contact us</button>
         </footer>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
